# Finite_State_Machine

./: CMakeLists.txt  LICENSE  README.md  finiteStateMachine.h  main.cpp
src/: finiteStateMachine.h  main.cpp
test/: finiteStateMachineTests.cpp
